--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <h1>{% block title %} добро пожаловать на 228ch, снова {% endblock %}</h1>
     {% for post in posts %}
         <a href="{{ url_for('post', post_id=post['id']) }}">
